tests/fail/union_has_drop.tk
shape Resource (
    val: ^i32
)


shape IllegalUnion (
    // EXPECT: manages resources
    as r: Resource |
    as i: i32
)

shape IllegalSmartPtrUnion (
    // EXPECT: manages resources
    as p: ^i32 |
    as i: i32
)

shape IllegalArrayUnion (
    // EXPECT: manages resources
    as arr: [Resource; 2] |
    as i: i32
)

shape SafeUnion (
    as p: *Resource | // Raw pointer is safe
    as i: i32
)

fn main() { }
